--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,5 +1,5 @@
 # prefixキーをC-lに変更する
-set -g prefix C-l
+set -g prefix C-k
 
 # キーストロークのディレイを減らす
 set -sg escape-time 1
@@ -30,7 +30,7 @@ bind j select-pane -D
 bind k select-pane -U
 bind l select-pane -R
 bind -r C-h select-window -t :-
-bind -r C-l select-window -t :+
+bind -r C-k select-window -t :+
 
 # Vimのキーバインドでペインをリサイズする
 bind -r H resize-pane -L 5
